# iot-architecture

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  release
application/: __main__.py
batch_processor/: __main__.py
common/: config.py  device_service.py  models.py  telemetry_queue.py  telemetry_service.py
event_processor/: __main__.py  lambda.py
event_processor/terraform/: lambda.tf  main.tf
gateway/: __main__.py
producer/: __main__.py
